// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimeSeriesPanel (canvas) — Annotations point annotations 1`] = `
[
  {
    "props": {
      "x0": 0,
      "x1": 0,
      "y0": 8,
      "y1": 357,
    },
    "type": "createLinearGradient",
  },
  {
    "props": {
      "x": 0.5,
      "y": 0.5,
    },
    "type": "translate",
  },
  {
    "props": {
      "value": "#808080",
    },
    "type": "strokeStyle",
  },
  {
    "props": {
      "value": {
        "addColorStop": [
          [
            0,
            "#80808073",
          ],
          [
            1,
            "#80808000",
          ],
        ],
      },
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "value": 3,
    },
    "type": "lineWidth",
  },
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 352,
            "width": 619,
            "x": 22.5,
            "y": 6.5,
          },
          "type": "rect",
        },
      ],
    },
    "type": "clip",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "x": 24,
            "y": 320,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 178,
            "y": 137,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 332,
            "y": 228,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 486,
            "y": 45,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 640,
            "y": 173,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 640,
            "y": 504,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 24,
            "y": 504,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "path": [
        {
          "props": {
            "x": 24,
            "y": 320,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 178,
            "y": 137,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 332,
            "y": 228,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 486,
            "y": 45,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 640,
            "y": 173,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {},
    "type": "restore",
  },
  {
    "props": {
      "x": -0.5,
      "y": -0.5,
    },
    "type": "translate",
  },
  {
    "props": {
      "x": 0.9,
      "y": 0.9,
    },
    "type": "translate",
  },
  {
    "props": {
      "value": "#808080",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "value": 1.8,
    },
    "type": "lineWidth",
  },
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 355.4,
            "width": 622.4,
            "x": 20.8,
            "y": 4.8,
          },
          "type": "rect",
        },
      ],
    },
    "type": "clip",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "x": 25.6,
            "y": 320,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "anticlockwise": false,
            "endAngle": 6.283185307179586,
            "radius": 1.6,
            "startAngle": 0,
            "x": 24,
            "y": 320,
          },
          "type": "arc",
        },
        {
          "props": {
            "x": 179.6,
            "y": 137,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "anticlockwise": false,
            "endAngle": 6.283185307179586,
            "radius": 1.6,
            "startAngle": 0,
            "x": 178,
            "y": 137,
          },
          "type": "arc",
        },
        {
          "props": {
            "x": 333.6,
            "y": 228,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "anticlockwise": false,
            "endAngle": 6.283185307179586,
            "radius": 1.6,
            "startAngle": 0,
            "x": 332,
            "y": 228,
          },
          "type": "arc",
        },
        {
          "props": {
            "x": 487.6,
            "y": 45,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "anticlockwise": false,
            "endAngle": 6.283185307179586,
            "radius": 1.6,
            "startAngle": 0,
            "x": 486,
            "y": 45,
          },
          "type": "arc",
        },
        {
          "props": {
            "x": 641.6,
            "y": 173,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "anticlockwise": false,
            "endAngle": 6.283185307179586,
            "radius": 1.6,
            "startAngle": 0,
            "x": 640,
            "y": 173,
          },
          "type": "arc",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "path": [
        {
          "props": {
            "x": 25.6,
            "y": 320,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "anticlockwise": false,
            "endAngle": 6.283185307179586,
            "radius": 1.6,
            "startAngle": 0,
            "x": 24,
            "y": 320,
          },
          "type": "arc",
        },
        {
          "props": {
            "x": 179.6,
            "y": 137,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "anticlockwise": false,
            "endAngle": 6.283185307179586,
            "radius": 1.6,
            "startAngle": 0,
            "x": 178,
            "y": 137,
          },
          "type": "arc",
        },
        {
          "props": {
            "x": 333.6,
            "y": 228,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "anticlockwise": false,
            "endAngle": 6.283185307179586,
            "radius": 1.6,
            "startAngle": 0,
            "x": 332,
            "y": 228,
          },
          "type": "arc",
        },
        {
          "props": {
            "x": 487.6,
            "y": 45,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "anticlockwise": false,
            "endAngle": 6.283185307179586,
            "radius": 1.6,
            "startAngle": 0,
            "x": 486,
            "y": 45,
          },
          "type": "arc",
        },
        {
          "props": {
            "x": 641.6,
            "y": 173,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "anticlockwise": false,
            "endAngle": 6.283185307179586,
            "radius": 1.6,
            "startAngle": 0,
            "x": 640,
            "y": 173,
          },
          "type": "arc",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {},
    "type": "restore",
  },
  {
    "props": {
      "x": -0.9,
      "y": -0.9,
    },
    "type": "translate",
  },
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "height": 349,
      "width": 616,
      "x": 24,
      "y": 8,
    },
    "type": "rect",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "height": 349,
            "width": 616,
            "x": 24,
            "y": 8,
          },
          "type": "rect",
        },
      ],
    },
    "type": "clip",
  },
  {
    "props": {
      "value": 2,
    },
    "type": "lineWidth",
  },
  {
    "props": {
      "segments": [
        5,
        5,
      ],
    },
    "type": "setLineDash",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 178,
      "y": 8,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 178,
      "y": 357,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "value": "#00d3ff",
    },
    "type": "strokeStyle",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 178,
            "y": 8,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 178,
            "y": 357,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 332,
      "y": 8,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 332,
      "y": 357,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "value": "#00d3ff",
    },
    "type": "strokeStyle",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 332,
            "y": 8,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 332,
            "y": 357,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 486,
      "y": 8,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 486,
      "y": 357,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "value": "#00d3ff",
    },
    "type": "strokeStyle",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 486,
            "y": 8,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 486,
            "y": 357,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {},
    "type": "restore",
  },
]
`;

exports[`TimeSeriesPanel (canvas) — Annotations region annotations 1`] = `
[
  {
    "props": {
      "x0": 0,
      "x1": 0,
      "y0": 8,
      "y1": 357,
    },
    "type": "createLinearGradient",
  },
  {
    "props": {
      "x": 0.5,
      "y": 0.5,
    },
    "type": "translate",
  },
  {
    "props": {
      "value": "#808080",
    },
    "type": "strokeStyle",
  },
  {
    "props": {
      "value": {
        "addColorStop": [
          [
            0,
            "#80808073",
          ],
          [
            1,
            "#80808000",
          ],
        ],
      },
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "value": 3,
    },
    "type": "lineWidth",
  },
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 352,
            "width": 619,
            "x": 22.5,
            "y": 6.5,
          },
          "type": "rect",
        },
      ],
    },
    "type": "clip",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "x": 24,
            "y": 320,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 178,
            "y": 137,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 332,
            "y": 228,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 486,
            "y": 45,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 640,
            "y": 173,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 640,
            "y": 504,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 24,
            "y": 504,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "path": [
        {
          "props": {
            "x": 24,
            "y": 320,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 178,
            "y": 137,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 332,
            "y": 228,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 486,
            "y": 45,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 640,
            "y": 173,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {},
    "type": "restore",
  },
  {
    "props": {
      "x": -0.5,
      "y": -0.5,
    },
    "type": "translate",
  },
  {
    "props": {
      "x": 0.9,
      "y": 0.9,
    },
    "type": "translate",
  },
  {
    "props": {
      "value": "#808080",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "value": 1.8,
    },
    "type": "lineWidth",
  },
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 355.4,
            "width": 622.4,
            "x": 20.8,
            "y": 4.8,
          },
          "type": "rect",
        },
      ],
    },
    "type": "clip",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "x": 25.6,
            "y": 320,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "anticlockwise": false,
            "endAngle": 6.283185307179586,
            "radius": 1.6,
            "startAngle": 0,
            "x": 24,
            "y": 320,
          },
          "type": "arc",
        },
        {
          "props": {
            "x": 179.6,
            "y": 137,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "anticlockwise": false,
            "endAngle": 6.283185307179586,
            "radius": 1.6,
            "startAngle": 0,
            "x": 178,
            "y": 137,
          },
          "type": "arc",
        },
        {
          "props": {
            "x": 333.6,
            "y": 228,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "anticlockwise": false,
            "endAngle": 6.283185307179586,
            "radius": 1.6,
            "startAngle": 0,
            "x": 332,
            "y": 228,
          },
          "type": "arc",
        },
        {
          "props": {
            "x": 487.6,
            "y": 45,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "anticlockwise": false,
            "endAngle": 6.283185307179586,
            "radius": 1.6,
            "startAngle": 0,
            "x": 486,
            "y": 45,
          },
          "type": "arc",
        },
        {
          "props": {
            "x": 641.6,
            "y": 173,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "anticlockwise": false,
            "endAngle": 6.283185307179586,
            "radius": 1.6,
            "startAngle": 0,
            "x": 640,
            "y": 173,
          },
          "type": "arc",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "path": [
        {
          "props": {
            "x": 25.6,
            "y": 320,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "anticlockwise": false,
            "endAngle": 6.283185307179586,
            "radius": 1.6,
            "startAngle": 0,
            "x": 24,
            "y": 320,
          },
          "type": "arc",
        },
        {
          "props": {
            "x": 179.6,
            "y": 137,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "anticlockwise": false,
            "endAngle": 6.283185307179586,
            "radius": 1.6,
            "startAngle": 0,
            "x": 178,
            "y": 137,
          },
          "type": "arc",
        },
        {
          "props": {
            "x": 333.6,
            "y": 228,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "anticlockwise": false,
            "endAngle": 6.283185307179586,
            "radius": 1.6,
            "startAngle": 0,
            "x": 332,
            "y": 228,
          },
          "type": "arc",
        },
        {
          "props": {
            "x": 487.6,
            "y": 45,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "anticlockwise": false,
            "endAngle": 6.283185307179586,
            "radius": 1.6,
            "startAngle": 0,
            "x": 486,
            "y": 45,
          },
          "type": "arc",
        },
        {
          "props": {
            "x": 641.6,
            "y": 173,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "anticlockwise": false,
            "endAngle": 6.283185307179586,
            "radius": 1.6,
            "startAngle": 0,
            "x": 640,
            "y": 173,
          },
          "type": "arc",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {},
    "type": "restore",
  },
  {
    "props": {
      "x": -0.9,
      "y": -0.9,
    },
    "type": "translate",
  },
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "height": 349,
      "width": 616,
      "x": 24,
      "y": 8,
    },
    "type": "rect",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "height": 349,
            "width": 616,
            "x": 24,
            "y": 8,
          },
          "type": "rect",
        },
      ],
    },
    "type": "clip",
  },
  {
    "props": {
      "value": 2,
    },
    "type": "lineWidth",
  },
  {
    "props": {
      "segments": [
        5,
        5,
      ],
    },
    "type": "setLineDash",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 255,
      "y": 8,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 255,
      "y": 357,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "value": "#00d3ff",
    },
    "type": "strokeStyle",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 255,
            "y": 8,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 255,
            "y": 357,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 409,
      "y": 8,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 409,
      "y": 357,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "value": "#00d3ff",
    },
    "type": "strokeStyle",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 409,
            "y": 8,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 409,
            "y": 357,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {
      "value": "rgba(0, 211, 255, 0.1)",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "height": 349,
      "width": 154,
      "x": 255,
      "y": 8,
    },
    "type": "fillRect",
  },
  {
    "props": {},
    "type": "restore",
  },
]
`;
